--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-﻿<html><body><h1>Hola desde la rama master - combinada - desde github</h1></body></html>
+﻿<html><body><h1>Hola desde la rama master - combinada - desde github - version 2</h1></body></html>
